--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -43,12 +43,10 @@
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.BillRequisitionMasterId, new { id = "hidBRMasterId" })
-                @Html.HiddenFor(model => model.DetailModel.BillRequisitionDetailId, new { id = "hidDamageDetailId" })
+                @Html.HiddenFor(model => model.DetailModel.BillRequisitionDetailId, new { id = "hiddenBillRequisitionDetailId" })
 
                 @Html.HiddenFor(model => model.ActionId, new { id = "ActionId" })
                 @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
-                @*@Html.HiddenFor(model => model.FromCustomerId, new { id = "hidCustomerTypeFk" })*@
-                @*<span id="hiddenUnitPrice" hidden="hidden"></span>*@
                 <div class="box-danger">
                     <div class="box-body">
                         @if (Model.BillRequisitionMasterId > 0)
@@ -99,7 +97,7 @@
                                     <div class="col-md-3">
                                         <label for="message-text" class="col-form-label">Requisition Date :</label>
                                         <div class="form-group">
-                                            <input name="BRDate" asp-for="BRDate" type="datetime" value="@DateTime.Now.ToString("dd/MM/yyyy")" required="required" class="datepicker " placeholder="Operation Date" autocomplete="off" id="txtOperationrDate" style="width: 92% !important">
+                                            <input name="BRDate" asp-for="BRDate" type="datetime" value="@DateTime.Now.ToString("dd/MM/yyyy")" required="required" class="datepicker " placeholder="Operation Date" autocomplete="off" id="txtOperationrDate">
                                             @Html.ValidationMessageFor(model => model.BRDate, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -115,7 +113,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Project Type :</label>
-                                            @Html.DropDownListFor(model => model.ProjectTypeId, Model.ProjectTypeList as SelectList, "==Select Project Type==", new { id = "projectTypeId", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
+                                            @Html.DropDownListFor(model => model.ProjectTypeId, Model.ProjectTypeList as SelectList, "==Select Project Type==", new { id = "projectTypeId", @class = "form-control searchingDropdown", style = "width:100%" })
                                             @Html.ValidationMessageFor(model => model.ProjectTypeId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -130,7 +128,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Work Detail / BOQ Item :</label>
                                             @Html.DropDownListFor(model => model.BOQItemId, Model.BOQItemList as SelectList, "==Select BOQ Item==", new { id = "ddlBOQItemId", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
@@ -138,7 +136,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-8">
+                                    <div class="col-md-9">
                                         <div class="form-group">
                                             <label for="txtDescription" class="col-form-label">Work Description :</label>
                                             @Html.TextAreaFor(model => model.Description, new { id = "txtitemDescription", placeholder = "Type work description here...", @class = "form-control", rows = 1 })
@@ -147,7 +145,7 @@
                                     </div>
                                 </div>
 
-                                
+
 
                             }
 
@@ -155,70 +153,71 @@
                             {
                                 <div class="row">
 
-                                    <div class="col-md-6">
+                                    <div class="col-md-3">
                                         <div class="form-group">
-                                            <label>Requisition Item/Material :</label>
+                                            <label>Requisition Item/ Material :</label>
                                             @Html.DropDownListFor(model => model.DetailModel.BillRequisitionItemId, Model.RequisitionItemList as SelectList, "==Select Requisition Material==", new { id = "ddlRequisitionItemId", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.BillRequisitionItemId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Material Unit :</label>
-                                            @Html.TextBoxFor(model => model.DetailModel.UnitId, new { id = "txtDamageQuantity", @class = "form-control", placeholder = "Material Unit" })
+                                            @Html.TextBoxFor(model => model.DetailModel.UnitId, new { id = "txtUnitId", @class = "form-control", placeholder = "Material Unit" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.UnitId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Estimate Quantity :</label>
-                                            @Html.TextBoxFor(model => model.DetailModel.EstimatedQty, new { id = "txtUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Estimate quantity" })
+                                            @Html.TextBoxFor(model => model.DetailModel.EstimatedQty, new { id = "decEstimatedQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Estimate quantity" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.EstimatedQty, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Recived So Far :</label>
-                                            @Html.TextBoxFor(model => model.DetailModel.ReceivedSoFar, new { id = "txtUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Recived so far" })
+                                            @Html.TextBoxFor(model => model.DetailModel.ReceivedSoFar, new { id = "decReceivedSoFar", type = "number", step = "0.01", @class = "form-control", placeholder = "Recived so far" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.ReceivedSoFar, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Remaining Quantity :</label>
-                                            @Html.TextBoxFor(model => model.DetailModel.RemainingQty, new { id = "txtUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Remaining quantity" })
+                                            @Html.TextBoxFor(model => model.DetailModel.RemainingQty, new { id = "decRemainingQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Remaining quantity" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.RemainingQty, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Material Demand :</label>
-                                            @Html.TextBoxFor(model => model.DetailModel.DemandQty, new { id = "txtUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Material demand" })
+                                            @Html.TextBoxFor(model => model.DetailModel.DemandQty, new { id = "decDemandQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Material demand" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.DemandQty, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Unit Rate :</label>
-                                            @Html.TextBoxFor(model => model.DetailModel.UnitRate, new { id = "txtUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Unit rate" })
+                                            @Html.TextBoxFor(model => model.DetailModel.UnitRate, new { id = "decUnitRate", type = "number", step = "0.01", @class = "form-control", placeholder = "Unit rate" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.UnitRate, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label>Total Price :</label>
-                                            @Html.TextBoxFor(model => model.DetailModel.TotalPrice, new { id = "txtUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Total price" })
+                                            @Html.TextBoxFor(model => model.DetailModel.TotalPrice, new { id = "decTotalPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Total price" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.TotalPrice, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
-
+                                </div>
+                                <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="txtDescription" class="col-form-label">Remarks :</label>
@@ -226,7 +225,6 @@
                                             @Html.ValidationMessageFor(model => model.DetailModel.Remarks, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
-
                                 </div>
 
                             }
@@ -328,7 +326,7 @@
     </section>
 }
 
-@using (Html.BeginForm("SubmitBillRequisitionMaster", "BillRequisition", FormMethod.Post, new { id = "submitBRMastersFromSlaveFormId", @class = "formValidator" }))
+@using (Html.BeginForm("SubmitBillRequisitionMaster", "BillRequisition", FormMethod.Post, new { id = "BRMasterSlaveFormId", @class = "formValidator" }))
 {
 
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -365,7 +363,7 @@
     </div>
 }
 
-@using (Html.BeginForm("DeleteBillRequisitionDetailById", "BillRequisition", FormMethod.Post, new { id = "deleteBRSlaveFormId", @class = "formValidator" }))
+@using (Html.BeginForm("DeleteBillRequisitionDetailById", "BillRequisition", FormMethod.Post, new { id = "BRMasterSlaveFormId", @class = "formValidator" }))
 {
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="modal fade" id="deleteDamageSlaveModal" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
@@ -381,8 +379,8 @@
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                    @Html.HiddenFor(model => model.DetailModel.BillRequisitionDetailId, new { id = "hidDeleteDamageDetailId" })
-                    @Html.HiddenFor(model => model.BillRequisitionMasterId, new { id = "hidDeleteDamageMasterId" })
+                    @Html.HiddenFor(model => model.DetailModel.BillRequisitionDetailId, new { id = "hidBillRequisitionDetailId" })
+                    @Html.HiddenFor(model => model.BillRequisitionMasterId, new { id = "hidBillRequisitionMasterId" })
                     @Html.HiddenFor(model => model.CompanyFK, new { id = "deleteCompanyFK" })
                     @Html.HiddenFor(model => model.ActionId, new { id = "deleteActionId" })
 
@@ -415,16 +413,15 @@
         $(document).ready(function () {
 
 
-            $('#dealerSalesOrderSlaveFormId').on('keyup keypress', function (e) {
+            //$('#BRMasterSlaveFormId').on('keyup keypress', function (e) {
 
-                var keyCode = e.keyCode || e.which;
-                if (keyCode === 13) {
-                    e.preventDefault();
-                    return false;
-                }
-            });
+            //    var keyCode = e.keyCode || e.which;
+            //    if (keyCode === 13) {
+            //        e.preventDefault();
+            //        return false;
+            //    }
+            //});
 
-            $('#tblStockAvailable').hide();
 
             $('#datePickerById').datepicker({
                 format: "dd/MM/yyyy",
@@ -438,34 +435,36 @@
                 }
             });
 
+        });
+           function makeEditble(rowId) {
 
+                $.ajax({
 
-        function makeEditble(rowId) {
+                    type: "POST",
+                    url: "@Url.Action("SingleBillRequisitionDetails", "BillRequisition")",
+                    datatype: "Json",
+                    data: { id: rowId },
+                    success: function (data) {
+                        unitPrice = data.UnitPrice;
 
-            $.ajax({
-
-                  type: "POST",
-                  url: "@Url.Action("SingleBillRequisitionDetails", "BillRequisition")",
-                  datatype: "Json",
-                  data: { id: rowId },
-                  success: function (data) {
-                      unitPrice = data.UnitPrice;
-
-                      $('#soCreateBtn').val("Update");
-                      $("#hidBRMasterId").val(data.BillRequisitionMasterId);
-                      $('#ActionId').val(2);
-                      $("#CompanyFK").val(data.CompanyId);
-                      $('#hiddenUnitPrice').val(data.UnitPrice);
-                      $("#txtProductName").val(data.ProductId).trigger('change');
-                      $("#ddlRProductFK").val(data.ProductId);
-                      $("#txtDamageQuantity").val(data.DamageQty);
-                      $("#ddlDamageTypeId").val(data.DealerDamageTypeId).trigger('change');
-                      $("#hidDamageDetailId").val(data.BillRequisitionDetailId);
-                      $("#txtremarks").text(data.Remarks);
-                      $('.txtUnitName').text(data.UnitName);
-                      window.scrollTo({ top: 0, behavior: 'smooth' });
-                  }
-                 });
+                        $('#soCreateBtn').val("Update");
+                        $("#hidBRMasterId").val(data.BillRequisitionMasterId);
+                        $('#ActionId').val(2);
+                        $("#CompanyFK").val(data.CompanyId);
+                        $("#hiddenBillRequisitionDetailId").val(data.BillRequisitionDetailId);
+                        $("#ddlRequisitionItemId").val(data.BillRequisitionItemId).trigger('change');
+                        
+                        $("#txtUnitId").val(data.UnitId);
+                        $("#decEstimatedQty").val(data.EstimatedQty);
+                        $("#decReceivedSoFar").val(data.ReceivedSoFar);
+                        $("#decRemainingQty").val(data.RemainingQty);
+                        $("#decDemandQty").val(data.DemandQty);
+                        $("#decUnitRate").val(data.UnitRate);
+                        $("#decTotalPrice").val(data.TotalPrice);
+                        $("#txtitemDescription").val(data.Remarks);
+                        window.scrollTo({ top: 0, behavior: 'smooth' });
+                    }
+                });
             }
 
         function makeSubmitble(rowId) {
@@ -481,23 +480,16 @@
 
         function makeDeletale(rowId) {
 
-            $('#hidDeleteDamageDetailId').val(rowId);
+            $('#hidBillRequisitionDetailId').val(rowId);
             $('#deleteActionId').val(3);
         }
 
         function resetDamageDeleteSlaveForm() {
 
-            $('#dealerSalesOrderSlaveFormId')[0].reset();
+            $('#BRMasterSlaveFormId')[0].reset();
             $('#ActionId').val(1);
         }
 
-        function calculateAmount() {
-
-            var packQuantity = $('#txtPackQuantity').val();
-            var consumption = $("#txtConsumption").val();
-            var quantityInKg = (Number(packQuantity) * Number(consumption)) / 1000;
-            $('#txtDamageQuantity').val(Number((quantityInKg).toFixed(3)))
-        }
 
     </script>
 }
